@startuml logical_data_model
title Campus Connect - Logical Data Model

class User {
  +id: UUID
  +email: String
  +name: String
  +role: String
  +profilePic: String
  +department: String
  +office: String
  +officeHours: String
  +createdAt: DateTime
  +updatedAt: DateTime
  __
  +isStudent(): Boolean
  +isFaculty(): Boolean
}

class FacultyProfile {
  +id: UUID
  +userId: UUID
  +department: String
  +designation: String
  +officeLocation: String
  +officeHours: String
  +phone: String
  +researchInterests: String[]
  +createdAt: DateTime
  +updatedAt: DateTime
}

class CampusLocation {
  +id: UUID
  +name: String
  +buildingCode: String
  +lat: Double
  +lng: Double
  +description: String
  +category: String
  +floorInfo: String
  +imageUrl: String
  +createdAt: DateTime
  +updatedAt: DateTime
}

class Event {
  +id: UUID
  +title: String
  +description: String
  +location: String
  +locationId: UUID
  +time: DateTime
  +createdBy: UUID
  +category: String
  +imageUrl: String
  +createdAt: DateTime
  +updatedAt: DateTime
}

class AppNotification {
  +id: UUID
  +userId: UUID
  +eventId: UUID
  +type: String
  +title: String
  +message: String
  +sentAt: DateTime
  +read: Boolean
}

class SearchHistory {
  +id: UUID
  +userId: UUID
  +query: String
  +category: String
  +searchedAt: DateTime
}

class EventRSVP {
  +id: UUID
  +eventId: UUID
  +userId: UUID
  +status: String
  +createdAt: DateTime
}

User "1" -- "0..1" FacultyProfile : has (userId)
User "1" -- "0..*" Event : creates (createdBy)
CampusLocation "1" -- "0..*" Event : hosts (locationId)
User "1" -- "0..*" AppNotification : receives (userId)
Event "0..1" -- "0..*" AppNotification : triggers (eventId)
User "1" -- "0..*" SearchHistory : performs (userId)
User "1" -- "0..*" EventRSVP : makes (userId)
Event "1" -- "0..*" EventRSVP : has (eventId)

note right of User
  Role: 'student' | 'faculty'
  Enforced via database CHECK
  constraint and Row Level
  Security (RLS) policies
end note

note bottom of FacultyProfile
  One-to-one with User
  Only when User.role = 'faculty'
  userId is UNIQUE FK to User.id
end note

note right of Event
  locationId: optional FK to CampusLocation
  createdBy: required FK to User.id
  Only faculty can INSERT/UPDATE/DELETE
  (enforced via RLS policy)
end note

note left of AppNotification
  userId can be NULL for broadcasts
  eventId links to Event (optional)
  type: 'announcement' | 'event' | 'reminder'
end note

note bottom of CampusLocation
  Geographic coords (lat, lng)
  for Google Maps integration
  All users can view
  Only faculty can manage (RLS)
end note

@enduml
